[build-system]
requires = ["setuptools", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "NeoDynamics"
authors = [
  { name="Yilang Hu" },
  { name = "Xinhao Han" }
]
dynamic = ["version"]
readme = "README.md"
requires-python = "==3.11.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "python-box >= 7.3.2",
]


[tool.versioningit]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/NeoBinder/NeoDynamics"
Issues = "https://github.com/NeoBinder/NeoDynamics/issues"
